Changed copyright at the bottom of the page so that there's no confusion about this code belonging to me

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div>
-        <p>&copy; 2014 JDA</p>
+        <p>&copy; 2014 Randy Kamradt Sr</p>
       </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
